--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="container mx-auto flex items-center justify-between px-6">
             <div class="flex items-center space-x-4">
                 <img src="https://res.cloudinary.com/dysydffc7/image/upload/v1755564835/LOGO-MSCS_xaz9u0.jpg" alt="Logo" class="h-10 w-10 rounded-full">
-                <span class="text-xl font-bold">Multiservicios Automotriz CS</span>
+                <span class="text-xl font-bold">MACS</span>
             </div>
             <a href="https://wa.me/+584124392241?text=Hola,%20quisiera%20agendar%20una%20cita%20en%20el%20taller." class="flex items-center space-x-2 hover:text-gray-400 transition-colors duration-300">
                 <i class="fa-brands fa-whatsapp"></i>
@@ -293,5 +293,6 @@
 
 </body>
 </html>
+
 
 
