--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <i class="faq-icon fa-solid fa-chevron-down text-gray-500 transition-transform duration-300"></i>
                     </div>
                     <div class="faq-answer mt-4 text-gray-600">
-                        <p>Emprende World es una plataforma que te permite generar ingresos a través de la venta de productos digitales y servicios. Ofrecemos herramientas, entrenamiento y apoyo para que puedas construir tu propio negocio online.</p>
+                        <p>Emprende World es una plataforma que te permite generar ingresos a través de la publicidad digital. Ofrecemos herramientas, entrenamiento, apoyo y acompañamiento. Todo empendedor que ordene tarjetas es un apoyo para los que van llegando.</p>
                     </div>
                 </div>
 
@@ -293,6 +293,7 @@
 
 </body>
 </html>
+
 
 
 
