--- a/index.html
+++ b/index.html
@@ -129,7 +129,14 @@
                 </p>
                 <a href="https://wa.me/+584124392241?text=Hola,%20quisiera%20agendar%20una%20cita%20en%20el%20taller." class="bg-blue-600 text-white px-8 py-4 rounded-full font-semibold hover:bg-blue-700 transition duration-300 shadow-md">
                     Llamar Ahora
-                </a>
+                </a><div class="mt-8 text-center">
+    <h4 class="text-2xl font-bold text-gray-800 mb-4">Escanea nuestra tarjeta</h4>
+    <div class="bg-gray-100 p-6 rounded-lg shadow-md max-w-sm mx-auto">
+        <img src="https://res.cloudinary.com/dysydffc7/image/upload/v1755564835/LOGO-MSCS_xaz9u0.jpg" alt="Tarjeta de presentación de Multiservicios Automotriz CS" class="w-full h-auto rounded-lg mb-4">
+        <p class="text-gray-600 mb-4">Escanea este código para guardar nuestra información de contacto.</p>
+        <img src="https://res.cloudinary.com/dysydffc7/image/upload/v1756867771/frame_ytc9hj.png" alt="Código QR de la tarjeta de presentación" class="mx-auto w-32 h-auto">
+    </div>
+</div>
             </div>
         </section>
 
@@ -293,6 +300,7 @@
 
 </body>
 </html>
+
 
 
 
