--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- Sección de Menú (Nav) -->
     <header class="bg-gray-900 text-white shadow-lg">
         <div class="container mx-auto p-6 flex justify-between items-center">
-            <h1 class="text-2xl md:text-3xl font-bold">Multiservicios Automotriz CS</h1>
+            <h1 class="text-2xl md:text-3xl font-bold">EBS MAKING</h1>
             <nav class="hidden md:flex space-x-6 text-lg">
                 <a href="#inicio" class="hover:text-gray-400 transition duration-300">Inicio</a>
                 <a href="#servicios" class="hover:text-gray-400 transition duration-300">Servicios</a>
@@ -300,6 +300,7 @@
 
 </body>
 </html>
+
 
 
 
