--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MACS</title>
+    <title>EBS</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Font Awesome para íconos -->
@@ -255,7 +255,7 @@
     <!-- Pie de Página (Footer) -->
     <footer class="bg-gray-900 text-white p-6 mt-12">
         <div class="container mx-auto text-center text-sm">
-            &copy; 2025 Multiservicios Automotriz CS. Todos los derechos reservados.
+            &copy; 2025 EBS MAKING OF WEAR.     Todos los derechos reservados.
         </div>
     </footer>
 
@@ -300,6 +300,7 @@
 
 </body>
 </html>
+
 
 
 
