--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <header class="bg-gray-900 text-white py-4">
         <div class="container mx-auto flex items-center justify-between px-6">
             <div class="flex items-center space-x-4">
-                <img src="https://res.cloudinary.com/dysydffc7/image/upload/v1755564835/LOGO-MSCS_xaz9u0.jpg" alt="Logo" class="h-10 w-10 rounded-full">
-                <span class="text-xl font-bold">MACS</span>
+                <img src="https://res.cloudinary.com/dysydffc7/image/upload/v1756888292/298724174_476212820997299_7261911157029390615_n_i1hlwy.jpg" alt="Logo" class="h-10 w-10 rounded-full">
+                <span class="text-xl font-bold">EBS</span>
             </div>
             <a href="https://wa.me/+584124392241?text=Hola,%20quisiera%20agendar%20una%20cita%20en%20el%20taller." class="flex items-center space-x-2 hover:text-gray-400 transition-colors duration-300">
                 <i class="fa-brands fa-whatsapp"></i>
@@ -300,6 +300,7 @@
 
 </body>
 </html>
+
 
 
 
