--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EBS</title>
+    <title>MACS</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Font Awesome para íconos -->
@@ -50,8 +50,8 @@
     <header class="bg-gray-900 text-white py-4">
         <div class="container mx-auto flex items-center justify-between px-6">
             <div class="flex items-center space-x-4">
-                <img src="https://res.cloudinary.com/dysydffc7/image/upload/v1756888292/298724174_476212820997299_7261911157029390615_n_i1hlwy.jpg" alt="Logo" class="h-10 w-10 rounded-full">
-                <span class="text-xl font-bold">EBS</span>
+                <img src="https://res.cloudinary.com/dysydffc7/image/upload/v1755564835/LOGO-MSCS_xaz9u0.jpg" alt="Logo" class="h-10 w-10 rounded-full">
+                <span class="text-xl font-bold">MACS</span>
             </div>
             <a href="https://wa.me/+584124392241?text=Hola,%20quisiera%20agendar%20una%20cita%20en%20el%20taller." class="flex items-center space-x-2 hover:text-gray-400 transition-colors duration-300">
                 <i class="fa-brands fa-whatsapp"></i>
@@ -63,7 +63,7 @@
     <!-- Sección de Menú (Nav) -->
     <header class="bg-gray-900 text-white shadow-lg">
         <div class="container mx-auto p-6 flex justify-between items-center">
-            <h1 class="text-2xl md:text-3xl font-bold">EBS MAKING</h1>
+            <h1 class="text-2xl md:text-3xl font-bold">Multiservicios Automotriz CS</h1>
             <nav class="hidden md:flex space-x-6 text-lg">
                 <a href="#inicio" class="hover:text-gray-400 transition duration-300">Inicio</a>
                 <a href="#servicios" class="hover:text-gray-400 transition duration-300">Servicios</a>
@@ -255,7 +255,7 @@
     <!-- Pie de Página (Footer) -->
     <footer class="bg-gray-900 text-white p-6 mt-12">
         <div class="container mx-auto text-center text-sm">
-            &copy; 2025 EBS MAKING OF WEAR.     Todos los derechos reservados.
+            &copy; 2025 Multiservicios Automotriz CS. Todos los derechos reservados.
         </div>
     </footer>
 
@@ -300,9 +300,6 @@
 
 </body>
 </html>
-
-
-
 
 
 
