--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         <i class="faq-icon fa-solid fa-chevron-down text-gray-500 transition-transform duration-300"></i>
                     </div>
                     <div class="faq-answer mt-4 text-gray-600">
-                        <p>Emprende World es una plataforma que te permite generar ingresos a través de la publicidad digital. Ofrecemos herramientas, entrenamiento, apoyo y acompañamiento. Todo emprendedor que ordena tarjetas es un apoyo para los que van llegando.</p>
+                        <p>Emprende World es una plataforma que te permite generar ingresos a través de la publicidad digital. Ofrecemos herramientas, entrenamiento, apoyo y acompañamiento.</p>
                     </div>
                 </div>
 
@@ -300,6 +300,7 @@
 
 </body>
 </html>
+
 
 
 
