--- a/index.html
+++ b/index.html
@@ -173,8 +173,10 @@
             <div class="text-center">
                 <h3 class="text-3xl font-bold text-gray-800 mb-4">Gana Ingresos con Nosotros</h3>
                 <p class="text-gray-600 mb-6 max-w-lg mx-auto">
-                    Aquí puedes ver cómo empezar a generar ingresos.
+                    Escanea el código QR o haz clic en el botón para comenzar a generar ingresos.
                 </p>
+                <!-- Código QR -->
+                <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://www.emprendeworld.com/websignup?ref=52065737" alt="Código QR para registro en Emprende World" class="mx-auto my-6 rounded-lg shadow-md">
                 <!-- Imagen de "Emprende World" -->
                 <img src="https://res.cloudinary.com/dysydffc7/image/upload/v1755564408/P-6_w7edxu.png" alt="Emprende World" class="mx-auto w-full h-auto my-6 rounded-lg shadow-md">
                 <!-- Nuevo botón de registro -->
