--- a/index.html
+++ b/index.html
@@ -154,6 +154,28 @@
                 </div>
             </div>
         </section>
+<!-- QR Estable para Multiservicios Automotriz CS -->
+<section id="qr-cliente" class="bg-white p-8 rounded-xl shadow-lg mb-12">
+  <div class="text-center">
+    <h3 class="text-3xl font-bold text-gray-800 mb-4">Escanea para abrir la Tarjeta Digital</h3>
+
+    <!-- ENLACE: URL estable en Netlify -->
+    <a href="https://multiservicioautomotrizcs.netlify.app/" target="_blank" rel="noopener">
+      <!-- IMAGEN: QR generado automáticamente desde qrserver -->
+      <img src="https://res.cloudinary.com/dysydffc7/image/upload/v1758345524/qr-multiservicios_ugk0rx.png"
+           alt="QR Multiservicios Automotriz CS"
+           style="width:260px;height:auto;border-radius:8px;box-shadow:0 8px 20px rgba(0,0,0,0.08);">
+    </a>
+
+    <p class="text-gray-500 mt-3">
+      También puedes abrir directamente:  
+      <a href="https://multiservicioautomotrizcs.netlify.app/" target="_blank" class="text-blue-600 underline">
+        https://multiservicioautomotrizcs.netlify.app/
+      </a>
+    </p>
+  </div>
+</section>
+
 
         <!-- Sección de Contacto -->
         <section id="contacto" class="bg-white p-8 rounded-xl shadow-lg mb-12">
@@ -285,7 +307,7 @@
     <!-- Pie de Página (Footer) -->
     <footer class="bg-gray-900 text-white p-6 mt-12">
         <div class="container mx-auto text-center text-sm">
-            &copy; 2025 Multiservicios Automotriz CS. Todos los derechos reservados.
+            &copy; 2025 Multiservicios Automotriz CS. Todos los derechos reservados / Diseño Digital de esta Tarjeta: EBS Making - Diseño Digital
         </div>
     </footer>
 
