--- a/index.html
+++ b/index.html
@@ -305,11 +305,18 @@
     </main>
 
     <!-- Pie de Página (Footer) -->
-    <footer class="bg-gray-900 text-white p-6 mt-12">
-        <div class="container mx-auto text-center text-sm">
-            &copy; 2025 Multiservicios Automotriz CS. Todos los derechos reservados / Diseño Digital de esta Tarjeta: EBS Making - Diseño Digital
-        </div>
-    </footer>
+   <footer class="bg-gray-900 text-white p-6 mt-12">
+  <div class="container mx-auto text-center text-sm">
+    &copy; 2025 Multiservicios Automotriz CS. Todos los derechos reservados / Diseño Digital de esta Tarjeta: EBS Making - Diseño Digital
+    <br>
+    📲 <a href="https://wa.me/573181739930?text=Hola%2C%20quiero%20más%20información%20sobre%20sus%20servicios."
+          target="_blank"
+          class="text-green-400 underline hover:text-green-200">
+      Contáctame por WhatsApp
+    </a>
+  </div>
+</footer>
+
 
     <!-- Botones Flotantes de Contacto con íconos de Font Awesome -->
     <div class="floating-button">
@@ -372,3 +379,4 @@
 
 </body>
 </html>
+
